--- a/resume.html
+++ b/resume.html
@@ -2,39 +2,39 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width; initial-scale;"/>
     <title>Gisselle Vallejo's Resume</title>
     <link href="web.css" media="screen" rel="stylesheet"/>
     <link href="print.css" media="print" rel="stylesheet"/>
+    <link href="mobile.css" media="screen" rel="stylesheet"/>
   </head>
   <body>
     <div id="box">
     <header id="contact">
-      <h1>Gisselle Vallejo</h1>
-      <address>
-        gmv34@miami.edu<br>
-        (305)801-4864
-      </address>
+      <h1>Gisselle Vallejo
+      </h1>
+          <p><em>gmv34@miami.edu</p></em>
+          <p><em>(305)801-4864</p></em>
+        </address></italic>
     </header>
-      <img src="pic.jpg" alt="Gisselle Vallejo"/>
-    <nav>
+    <nav id="border" id="navig">
       <ul>
-        <li class="start"><a href="#contact">Contact</a></li>
-        <li class="start"><a href="#objective">Objective</a></li>
-        <li class="start"><a href="#education">Education</a></li>
-        <li class="start"><a href="#work-experience">Work Experience</a></li>
-        <li class="start"><a href="#volunteer-work">Volunteer Work</a></li>
+        <li class="start"><a href="index.html">Home</a></li>
+        <li class="start"><a href="project.html">Projects</a></li>
+        <li class="start"><a href="Volunteer Work.html">Volunteer Work</a></li>
+        <li class="start"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   <main>
 
-    <section id="objective">
+    <section>
       <h2>Objective</h2>
       <article>
         <p><strong>To obtain a career in Journalism.</strong></p>
       </article>
     </section>
 
-    <section id="education">
+    <section>
       <h2>Education</h2>
       <article id="miami">
         <p><strong>University of Miami,</strong> Coral Gables, Fl. Masters in Journalism. 2015-present.</p>
@@ -46,26 +46,14 @@
       </article>
     </section>
 
-    <section id="work-experience">
+    <section>
       <h2>Work Experience</h2>
       <article>
         <p><strong>Psychiatry Medical Office,</strong> Homestead, Fl. Secretary. 2015-present.
         <p><strong>Internal Medicine Office,</strong> Hialeah, Fl. Secretary. 2007-2010.
       </article>
     </section>
-
-    <section id="volunteer-work">
-      <h2>Volunteer Work</h2>
-      <article>
-        <p><strong>Emmaus Retreat.</strong> Helped in a Christian retreat. 2014-present.</p>
-        <p><strong>Health Fair.</strong> Examine patients by taking vital signs and history then presenting their case to a Doctor. 2012-2012.</p>
-        <p><strong>Mission Trip.</strong> Went to Dominican Republic for 10 days to assist the Doctors in examining 100-200 patients a day, providing the patients with care and medication. Rotated with other students in taking blood pressure, pulse and assisting Doctors in minor surgeries, injections and organizing medication. Summer 2007 and 2008. </p>
-      </article>
-    </section>
   </main>
-  <footer>
-        <p><small>Contact me for more information</small></p>
-  </footer>
     </div>
   </body>
 </html>
