final project-done

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width; initial-scale;"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1;"/>
     <title>Projects</title>
     <link href="web.css" media="screen" rel="stylesheet"/>
     <link href="print.css" media="print" rel="stylesheet"/>
@@ -17,7 +17,7 @@
           <li class="start"><a href="index.html">Home</a></li>
           <li class="start"><a href="resume.html">Resume</a></li>
           <li class="start"><a href="project.html">Projects</a></li>
-          <li class="start"><a href="Volunteer Work.html">Volunteer Work</a></li>
+          <li class="start"><a href="volunteer-work.html">Volunteer <span class="web">Work</span></a></li>
         </ul>
       </nav>
       <div id= "contactlinks">
@@ -40,8 +40,9 @@ while(x=eval(x));
 //]]>
 </script> </li>
 
-  <li>      <a href="https://twitter.com/gissellemv9"><i class="fa fa-twitter fa-3x"></a></i></li>
-    <li><a href="https://www.linkedin.com/profile/view?id=AAIAABqKoRABDTkbQWwGPfUc3-zo_EPZT2beOQA&trk=nav_responsive_tab_profile_pic"/><i class="fa fa-linkedin fa-3x"></a></i></li>
+  <li><a href="https://twitter.com/gissellemv9"><i class="fa fa-twitter fa-3x"></i></a></li>
+    <li><a href="https://www.linkedin.com/profile/view?id=AAIAABqKoRABDTkbQWwGPfUc3-zo_EPZT2beOQA&trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin fa-3x"></i></a></li>
   </ul>
     </div>
-    </body>
+  </div>
+  </body>
