--- a/project.html
+++ b/project.html
@@ -2,21 +2,30 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width; initial-scale;"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1;"/>
     <title>Projects</title>
     <link href="web.css" media="screen" rel="stylesheet"/>
     <link href="print.css" media="print" rel="stylesheet"/>
     <link href="mobile.css" media="screen" rel="stylesheet"/>
   </head>
   <body>
-      <h1>Health Communication</h1>
+    <div id="projbox">
+      <h1><span class="web">Health Communication</span><span class="mobile">Projects</span></h1>
       <nav id="navig">
         <ul>
           <li class="start"><a href="index.html">Home</a></li>
           <li class="start"><a href="resume.html">Resume</a></li>
-          <li class="start"><a href="Volunteer Work.html">Volunteer Work</a></li>
+        <li class="start"><a href="volunteer-work.html">Volunteer <span class="web">Work</span></a></li>
           <li class="start"><a href="contact.html">Contact</a></li>
         </ul>
-        <ul>
+      </nav>
+        <ol>
         <li><img src="workpic.jpg" alt="Gisselle Vallejo"/></li>
-        <li><img src="childhood-mental-health.jpg"/></li>
+        <li><img src="childhood-mental-health.jpg" alt="Gisselle Vallejo"/></li>
+        <li><img src="alzheimer-pic.jpg" alt="Gisselle Vallejo"/></li>
+      </ol>
+  <p class="mobile">Here are a couple of projects I have been working on. For pictures please visit a non-mobile webpage.</p>
+    <p class="mobile">Childhood Mental Health: A look at childhood mental health disorders in the United States</p>
+      <p class="mobile">Alzheimer's Disease: A look at Alzheimer's Disease in the United States</p>
+    </div>
+  </body>
