--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width; initial-scale;"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1;"/>
     <title>Gisselle Vallejo's Resume</title>
     <link href="web.css" media="screen" rel="stylesheet"/>
     <link href="print.css" media="print" rel="stylesheet"/>
@@ -13,15 +13,14 @@
     <header id="contact">
       <h1>Gisselle Vallejo
       </h1>
-          <p><em>gmv34@miami.edu</p></em>
-          <p><em>(305)801-4864</p></em>
-        </address></italic>
+          <p><em>gmv34@miami.edu</em></p>
+          <p><em>(305)801-4864</em></p>
     </header>
     <nav id="border" id="navig">
       <ul>
         <li class="start"><a href="index.html">Home</a></li>
         <li class="start"><a href="project.html">Projects</a></li>
-        <li class="start"><a href="Volunteer Work.html">Volunteer Work</a></li>
+        <li class="start"><a href="volunteer-work.html">Volunteer <span class="web">Work</span></a></li>
         <li class="start"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -38,11 +37,15 @@
       <h2>Education</h2>
       <article id="miami">
         <p><strong>University of Miami,</strong> Coral Gables, Fl. Masters in Journalism. 2015-present.</p>
-        <a href="http://welcome.miami.edu/">University of Miami</a>
+        <p><strong><a href="http://welcome.miami.edu/">University of Miami</a></strong></p>
+      </article>
+      <article>
         <p><strong>American University of Antigua College of Medicine,</strong> Antigua. 2010-2014.</p>
-        <a href="https://www.auamed.org/">American University of Antigua</a>
+        <p><strong><a href="https://www.auamed.org/">American University of Antigua</a></strong></p>
+      </article>
+      <article>
         <p><strong>Barry University,</strong> Miami Shores, Fl. Bachelor of Science with a major in Biology (Pre-Med) and a minor in Dance. 2006-2010.</p>
-        <a href="https://www.barry.edu/">Barry University</a>
+        <p><strong><a href="https://www.barry.edu/">Barry University</a></strong></p>
       </article>
     </section>
 
@@ -50,6 +53,8 @@
       <h2>Work Experience</h2>
       <article>
         <p><strong>Psychiatry Medical Office,</strong> Homestead, Fl. Secretary. 2015-present.
+      </article>
+      <article>
         <p><strong>Internal Medicine Office,</strong> Hialeah, Fl. Secretary. 2007-2010.
       </article>
     </section>
