--- a/volunteer-work.html
+++ b/volunteer-work.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width; initial-scale;"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1;"/>
     <title>Projects</title>
     <link href="web.css" media="screen" rel="stylesheet"/>
     <link href="print.css" media="print" rel="stylesheet"/>
@@ -19,7 +19,6 @@
           <li class="start"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-    <section id="volunteer-work">
     <article>
       <p><strong>Emmaus Retreat.</strong> Helped in a Christian retreat. 2014-present.</p>
       <img src="St_Mark_Women_11_Group_Pic-(1).jpg" alt="Gisselle Vallejo"/>
@@ -28,4 +27,5 @@
       <p><strong>Mission Trip.</strong> Went to Dominican Republic for 10 days to assist the Doctors in examining 100-200 patients a day, providing the patients with care and medication. Rotated with other students in taking blood pressure, pulse and assisting Doctors in minor surgeries, injections and organizing medication. Summer 2007 and 2008. </p>
       <img src="mpic.jpg" alt="Gisselle Vallejo"/>
     </article>
-    </section>
+  </div>
+  </body>
