--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width; initial-scale;"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1;"/>
     <title>Gisselle Vallejo's Resume</title>
     <link href="web.css" media="screen" rel="stylesheet"/>
     <link href="print.css" media="print" rel="stylesheet"/>
     <link href="mobile.css" media="screen" rel="stylesheet"/>
   </head>
   <body>
-      <h1 id="hh">Gisselle Vallejo</h1
+  <header>
+      <h1 id="hh">Gisselle Vallejo</h1>
     </header>
       <img id="homepic" src="pic.jpg" alt="Gisselle Vallejo"/>
     <nav>
       <ul id="navhome">
         <li class="start"><a href="resume.html">Resume</a></li>
         <li class="start"><a href="project.html">Projects</a></li>
-        <li class="start"><a href="Volunteer Work.html">Volunteer Work</a></li>
+        <li class="start"><a href="volunteer-work.html">Volunteer <span class="web">Work</span></a></li>
         <li class="start"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
